Fix positioning errors of previously squished nodes
white-space: nowrap;

--- a/app.css
+++ b/app.css
@@ -51,6 +51,7 @@ body {
 	outline: none;
 	font-size: 2em;
 	pointer-events: all;
+	white-space: nowrap;
 }
 .debug .node {
 	background: rgba(255, 255, 0, 0.3);
